--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 asgiref==3.6.0
+cffi==1.15.1
+cryptography==40.0.2
 Django==4.2.1
+django-extensions==3.2.1
+MarkupSafe==2.1.2
+Pillow==9.5.0
+pycparser==2.21
+pyOpenSSL==23.1.1
 sqlparse==0.4.4
 tzdata==2023.3
+Werkzeug==2.3.4
